fixed styling issues for overflowing

--- a/css/querries.css
+++ b/css/querries.css
@@ -18,6 +18,12 @@
     max-height: 85vh;
     box-shadow: var(--light-grayish-blue-2) 0 8px 24px;
   }
+
+  /* notifications */
+
+  .noti-container {
+    max-height: calc(85vh - 140px);
+  }  
 }
 
 /* for devices having width 1000px or more */
